Fix overflow styling

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,14 +2,14 @@
   text-align: center; }
 
 .app-container {
-  margin-top: 5.5em;
+  margin-top: 5em;
 }
 
 /* Borrowed from Markdown.css: http://kevinburke.bitbucket.org/markdowncss/markdown.css */
 body {
   font-family: Georgia, Palatino, serif;
   color: #444444;
-  line-height: 1; 
+  line-height: 1;
 }
 
 h1, h2, h3, h4 {
@@ -174,6 +174,7 @@ td {
   height: 100%;
   width: 100%;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .login-container {
@@ -182,7 +183,7 @@ td {
   height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(//s3-ap-southeast-1.amazonaws.com/qna-resources/assets/bg-1.jpg);
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
 
 }
 
@@ -194,7 +195,7 @@ td {
 .login-form h1 {
   text-align: center;
   color: #ffffff;
-  font-size: 5em;
+  font-size: 4.5em;
   font-weight: bold;
   font-family: "Source Sans Pro", Helvetica, "sans-serif";
   margin-bottom: 0;
@@ -235,7 +236,7 @@ td {
   text-align: center;
   font-family: "Source Sans Pro", Helvetica, "sans-serif";
   font-size: 2em;
-  line-height: 1.4285em; 
+  line-height: 1.4285em;
 }
 
 /*.ribbon-main {
